<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nuevo usuario"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:text="@string/correo_electronico" />
            <EditText
                android:id="@+id/txtUsuario" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">
            <TextView
                android:layout_marginRight="8dp"
                android:text="@string/clave" />
            <EditText
                android:id="@+id/txtClave"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">
            <TextView
                android:text="@string/nombre_completo" />
            <EditText
                android:id="@+id/txtNombreCompleto" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">
            <TextView
                android:layout_marginRight="8dp"
                android:text="@string/direccion" />
            <EditText
                android:id="@+id/txtDireccion" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">
            <TextView
                android:text="@string/ciudad"
                android:layout_marginRight="8dp" />
            <EditText
                android:id="@+id/txtCiudad" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnNuevoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alta_usuario"
        android:cornerRadius="0dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="right" />
</LinearLayout>